# conmat

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/config/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  conmat_demo
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_conmat
src/: CMakeLists.txt  conmat.cpp  conmat.h  conmat_config.h.in  demo.cpp
tests/: CMakeLists.txt  test_conmat.cpp
